multiple changes to amp-symbols

--- a/pages/content/amp-dev/romeo/2/index.html
+++ b/pages/content/amp-dev/romeo/2/index.html
@@ -6,9 +6,11 @@ $localization:
   path: /{locale}/2/{base}.html
 
 flyout:
+  format: ads
   description: Super fast ads on the web
   icon: amp-ads
 ---
+
 {% do doc.styles.addCssFile('css/components/templates/roadmap.css') %}
 
 <main class="ap--main ap-t-roadmap">
