--- a/pages/content/amp-dev/romeo/4/index.html
+++ b/pages/content/amp-dev/romeo/4/index.html
@@ -6,8 +6,10 @@ $localization:
   path: /{locale}/4/{base}.html
 
 flyout:
+  format: email
   description: Begin building
   icon: amp-email
+
 cards:
   - icon: icon-flash
     headline: Web page speed improves the user experience and core business metrics
