--- a/pages/content/amp-dev/runner/contrib/index.html
+++ b/pages/content/amp-dev/runner/contrib/index.html
@@ -6,9 +6,11 @@ $localization:
   path: /{locale}/runner/contrib/{base}.html
 
 flyout:
+  format: stories
   description: Breaking the status quo
   icon: amp-stories
 ---
+
 {% do doc.styles.addCssFile('css/components/templates/roadmap.css') %}
 
 <main class="ap--main ap-t-roadmap">
