--- a/pages/content/amp-dev/runner/index.html
+++ b/pages/content/amp-dev/runner/index.html
@@ -3,14 +3,14 @@ $title@: Guides & Tutorials
 $view: /views/2021/base.html
 $path: /runner/index.html
 $localization:
- path: /{locale}/runner/{base}.html
+  path: /{locale}/runner/{base}.html
 
 flyout:
-  format: food
+  format: stories
   description: Get started
   icon: guides-documents
-
 ---
+
 <main>
   <section class="ap-logo-stage">
     <div class="ap-logo-stage-content">
