--- a/pages/content/amp-dev/runner/success-stories/index.html
+++ b/pages/content/amp-dev/runner/success-stories/index.html
@@ -5,7 +5,9 @@ $hidden: true
 $path: /runner/success-stories/index.html
 $localization:
   path: /{locale}/runner/success-stories/index.html
+
 flyout:
+  format: websites
   description: Ready to use
   icon: template
 
