added daily-care for mixins, formats, home

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -16,7 +16,7 @@ format_explainer:
     description: "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
     link: "All about DailyFood"
     url: /
-  - name: ads
+  - name: daily-care
     headline: DailyCare
     description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
     link: "All about DailyCare"
