--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -11,7 +11,7 @@ format_explainer:
     description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
     link: "All about Ontomatica"
     url: /
-  - name: stories
+  - name: daily-food
     headline: DailyFood
     description: "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
     link: "All about DailyFood"
