added export-import data

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -21,7 +21,7 @@ format_explainer:
     description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
     link: "All about DailyCare"
     url: /
-  - name: email
+  - name: export-import-data
     headline: Export Import Data
     description: "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
     link: "All about Export Import Data"
