--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -6,10 +6,10 @@ $titles:
 description: Knowledge graph applications for industry, science and government.
 
 format_explainer:
-  - name: websites
-    headline: Ontomatica
-    description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
-    link: "All about Ontomatica"
+  - name: electronic-label
+    headline: Electronic Labels
+    description: "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
+    link: "All about Electronic Labels"
     url: /
   - name: daily-food
     headline: DailyFood
