added food-data-institute; ontomatica; 6 columns

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -26,6 +26,16 @@ format_explainer:
     description: "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
     link: "All about Export Import Data"
     url: /
+  - name: ontomatica
+    headline: Ontomatica
+    description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
+    link: "All about Ontomatica"
+    url: /
+  - name: food-data-institute
+    headline: Food Data Institute
+    description: "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
+    link: "All about Food Data Institute"
+    url: /
 
 cards:
   - icon: icon-ontomatica
