--- a/pages/content/amp-dev/romeo/4/index.html
+++ b/pages/content/amp-dev/romeo/4/index.html
@@ -6,9 +6,9 @@ $localization:
   path: /{locale}/4/{base}.html
 
 flyout:
-  format: email
+  format: websites
   description: Begin building
-  icon: amp-email
+  icon: amp-websites
 
 cards:
   - icon: icon-flash
