--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -10,6 +10,27 @@ flyout:
   format: stories
   description: Current events
   icon: amp-stories
+
+stage:
+  layout: all
+  devices:
+    - image_src: '/static/img/success-stories/tasty/tasty-desktop.jpg'
+      width: 8
+      height: 5
+      type: desktop
+      alt: Tasty
+    - image_src: '/static/img/success-stories/bmw_jvm/bmw-com-tablet.jpg'
+      width: 3
+      height: 4
+      type: tablet
+      alt: BMW and Jung von Matt
+      url: bmw-com
+    - image_src: '/static/img/success-stories/carved/amp_carved_1.jpg'
+      width: 3
+      height: 5
+      type: mobile
+      alt: Carved
+      url: carved
 ---
 {% do doc.styles.addCssFile('css/components/templates/success-story.css') %}
 
