--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -7,9 +7,9 @@ $localization:
   path: /{locale}/0/{base}.html
 
 flyout:
-  format: stories
+  format: websites
   description: Current events
-  icon: amp-stories
+  icon: amp-websites
 
 stage:
   layout: all
@@ -34,26 +34,71 @@ stage:
 ---
 {% do doc.styles.addCssFile('css/components/templates/success-story.css') %}
 
-<section class="ap--stage ap--container-fluid">
-  {% do doc.styles.addCssFile('css/components/organisms/stage.css') %}
-
-    <amp-state id="activeFilter">
-        <script type="application/json">
-          {
-            "chosenFilter": "none"
-          }
-        </script>
-      </amp-state>
-
-  <div class="ap-o-stage ap-o-stage-websites {{doc.stage.layout}}">
-    <div class="ap--container-fluid">
-      <div class="ap-o-stage-content">
-          <h2 class="ap-o-stage-content-subline">{{ _('Current events') }}</h2>
-          <h1 class="ap-o-stage-content-headline-big">{{ _('Blog' ) }}</h1>
+<main class="ap--main ap-t-success-story">
+  <section class="ap--stage ap--container-fluid">
+    {% do doc.styles.addCssFile('css/components/organisms/stage.css') %}
+  
+      <amp-state id="activeFilter">
+          <script type="application/json">
+            {
+              "chosenFilter": "none"
+            }
+          </script>
+        </amp-state>
+  
+    <div class="ap-o-stage ap-o-stage-websites {{doc.stage.layout}}">
+      <div class="ap--container-fluid">
+        <div class="ap-o-stage-content">
+            <h2 class="ap-o-stage-content-subline">{{ _('Current Events') }}</h2>
+            <h1 class="ap-o-stage-content-headline-big">{{ _('Blog' ) }}</h1>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  
+    {# ghost frame block #}
+    {% if doc.stage.devices %}
+    {% do doc.styles.addCssFile('css/components/organisms/ghost-frame-block.css') %}
+      <div class="ap-o-ghost-frame-block">
+        {% for device in doc.stage.devices %}
+        {% if device %}
+        {% do doc.styles.addCssFile('css/components/molecules/ghost-frame-desktop.css') %}
+        {% do doc.styles.addCssFile('css/components/molecules/ghost-frame-tablet.css') %}
+        {% do doc.styles.addCssFile('css/components/molecules/ghost-frame-mobile.css') %}
+        <div class="ap-m-ghost-frame-{{device.type}} {{device.direction}}">
+          {% if device.video_src %}
+          {% if device.video_id %}
+          {% if device.url %}
+          <a href="{{ g.doc('/content/amp-dev/runner/success-stories/' + device.url + '.yaml', locale=doc.locale).url.path }}">
+          {% endif %}
+            <amp-vimeo data-videoid="{{device.video_id}}" layout="responsive" width="16" height="9">
+            </amp-vimeo>
+            {% else %}
+            <amp-video width="{{device.width}}" height="{{device.height}}" layout="responsive" src="{{device.video_src}}"
+              poster="{{device.poster_src}}" artwork="{{device.artwork_src}}" title="{{device.video_title}}" artist="{{device.video_artist}}"
+              album="{{device.video_album}}" controls autoplay loop>
+            </amp-video>
+          {% if device.url %}
+          </a>
+          {% endif %}
+          {% endif %}
+          {% else %}
+          {% if device.url %}
+          <a href="{{ g.doc('/content/amp-dev/runner/success-stories/' + device.url + '.yaml', locale=doc.locale).url.path }}">
+          {% endif %}
+            <amp-img alt="{{device.alt}}" height="{{device.height}}" layout="responsive" src="{{device.image_src}}"
+              width="{{device.width}}">
+            </amp-img>
+          {% if device.url %}
+          </a>
+          {% endif %}
+          {% endif%}
+        </div>
+        {% endif %}
+        {% endfor %}
+      </div>
+    {% endif %}
+  </section>
+
 
   {% set categories = g.categories('/content/amp-dev/romeo/0', locale=doc.locale) %}
   <section class="ap--intro ap--container">
