updated blog yaml and localization path

--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -2,9 +2,9 @@
 $title@: Blog
 $view: /views/custom.j2
 $hidden: true
-$path: /0/index.html
+$path: /romeo/0/index.html
 $localization:
-  path: /{locale}/0/{base}.html
+  path: /{locale}/romeo/0/{base}.html
 
 flyout:
   format: websites
