added @ to blog content to test localization

--- a/pages/content/amp-dev/runner/index.html
+++ b/pages/content/amp-dev/runner/index.html
@@ -6,7 +6,7 @@ $localization:
   path: /{locale}/runner/{base}.html
 
 flyout:
-  format: stories
+  format: ads
   description: Get started
   icon: guides-documents
 ---
