added symbols to menu items; added SVG to 24-03-01 as desktop

--- a/pages/content/amp-dev/about/how-amp-works.html
+++ b/pages/content/amp-dev/about/how-amp-works.html
@@ -3,6 +3,11 @@ $title: How AMP works
 $order: 1
 descriptions: The following optimizations combined are the reason AMP pages are so fast they appear to load instantly. There are 7 reasons in total ...
 $view: /views/overview/custom-content.j2
+
+flyout:
+  format: amp-websites
+  description: How AMP works
+  icon: airplane
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
