--- a/pages/content/amp-dev/about/how-linked-data-works.html
+++ b/pages/content/amp-dev/about/how-linked-data-works.html
@@ -3,6 +3,11 @@ $title: JSON for Linking Data
 $order: 1
 descriptions: Data is messy and disconnected. JSON-LD organizes and connects it, creating a better Web.
 $view: /views/overview/custom-content.j2
+
+flyout:
+  format: amp-stories
+  description: JSON for Linking Data
+  icon: code-architecture
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
