--- a/pages/content/amp-dev/about/mission-and-vision.html
+++ b/pages/content/amp-dev/about/mission-and-vision.html
@@ -3,6 +3,11 @@ $title: Vision & Mission
 $order: 1
 description: Ourljhasdfbh vision is our north star we use to orient ourselves, and our mission describes the way we move into the direction of it.
 $view: /views/overview/custom-content.j2
+
+flyout:
+  format: amp-ads
+  description: Vision & Mission
+  icon: paperplane
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 
