--- a/pages/content/amp-dev/about/use-cases.html
+++ b/pages/content/amp-dev/about/use-cases.html
@@ -1,6 +1,11 @@
 ---
 $title: Use cases
 $view: /views/custom.j2
+
+flyout:
+  format: amp-email
+  description: JSON for Linking Data
+  icon: discussion
 ---
 {% block styles %}
 {% do doc.styles.addCssFile('css/components/templates/use-cases.css') %}
