--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -3,6 +3,11 @@ $title: AMP Roadshow
 $order: 2
 $view: /views/overview/events.j2
 
+flyout:
+  format: amp-ads
+  description: AMP Roadshow
+  icon: time
+
 roadshow: !g.yaml /shared/data/roadshow.yaml
 
 section_links:
