--- a/pages/content/amp-dev/documentation/index.html
+++ b/pages/content/amp-dev/documentation/index.html
@@ -2,6 +2,11 @@
 $title: Get Started
 $view: /views/2021/base.html
 
+flyout:
+  format: amp-websites
+  description: Get Started
+  icon: flask
+
 frameworks:
   - name: Next.js
     headline: Next.js
