--- a/pages/content/amp-dev/events/amp-fest-2020.html
+++ b/pages/content/amp-dev/events/amp-fest-2020.html
@@ -4,6 +4,11 @@ $order: 1
 $view: /views/overview/events.j2
 description: If you weren't able to catch AMP Fest live, check out all the talks here. From AMP and page experience, to Web Stories and WordPress, we shared a ton of exciting news!
 
+flyout:
+  format: amp-email
+  description: AMP Fest 2020
+  icon: star
+
 ampconf: !g.yaml /shared/data/amp-fest.yaml
 
 
