corrected format variable

--- a/pages/content/amp-dev/about/how-amp-works.html
+++ b/pages/content/amp-dev/about/how-amp-works.html
@@ -5,7 +5,7 @@ descriptions: The following optimizations combined are the reason AMP pages are 
 $view: /views/overview/custom-content.j2
 
 flyout:
-  format: amp-websites
+  format: websites
   description: How AMP works
   icon: airplane
 ---
