--- a/pages/content/amp-dev/about/how-linked-data-works.html
+++ b/pages/content/amp-dev/about/how-linked-data-works.html
@@ -5,7 +5,7 @@ descriptions: Data is messy and disconnected. JSON-LD organizes and connects it,
 $view: /views/overview/custom-content.j2
 
 flyout:
-  format: amp-stories
+  format: stories
   description: JSON for Linking Data
   icon: code-architecture
 ---
