--- a/pages/content/amp-dev/about/mission-and-vision.html
+++ b/pages/content/amp-dev/about/mission-and-vision.html
@@ -5,7 +5,7 @@ description: Ourljhasdfbh vision is our north star we use to orient ourselves, a
 $view: /views/overview/custom-content.j2
 
 flyout:
-  format: amp-ads
+  format: ads
   description: Vision & Mission
   icon: paperplane
 ---
