--- a/pages/content/amp-dev/about/use-cases.html
+++ b/pages/content/amp-dev/about/use-cases.html
@@ -3,7 +3,7 @@ $title: Use cases
 $view: /views/custom.j2
 
 flyout:
-  format: amp-email
+  format: email
   description: JSON for Linking Data
   icon: discussion
 ---
