--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -4,7 +4,7 @@ $order: 2
 $view: /views/overview/events.j2
 
 flyout:
-  format: amp-ads
+  format: ads
   description: AMP Roadshow
   icon: time
 
