--- a/pages/content/amp-dev/documentation/index.html
+++ b/pages/content/amp-dev/documentation/index.html
@@ -3,7 +3,7 @@ $title: Get Started
 $view: /views/2021/base.html
 
 flyout:
-  format: amp-websites
+  format: websites
   description: Get Started
   icon: flask
 
