commented blog index re missing j2 for other parts of yaml file

--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -123,7 +123,9 @@ stage:
       {% endfor %}
     </div>
   </section>
-
+<!--
+update teaser.j2 to read (in addition to teaser_doc) stage_doc and contents_doc
+-->
   <section class="ap--teaser-grid ap--container">
     <div class="ap-o-teaser-grid">
       <div class="ap-o-teaser-grid-list">
