updated flyout icons

--- a/pages/content/amp-dev/about/how-linked-data-works.html
+++ b/pages/content/amp-dev/about/how-linked-data-works.html
@@ -7,7 +7,7 @@ $view: /views/overview/custom-content.j2
 flyout:
   format: stories
   description: JSON for Linking Data
-  icon: code-architecture
+  icon: template
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
