--- a/pages/content/amp-dev/about/mission-and-vision.html
+++ b/pages/content/amp-dev/about/mission-and-vision.html
@@ -7,7 +7,7 @@ $view: /views/overview/custom-content.j2
 flyout:
   format: ads
   description: Vision & Mission
-  icon: paperplane
+  icon: components-flyout
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 
