--- a/pages/content/amp-dev/about/use-cases.html
+++ b/pages/content/amp-dev/about/use-cases.html
@@ -5,7 +5,7 @@ $view: /views/custom.j2
 flyout:
   format: email
   description: JSON for Linking Data
-  icon: discussion
+  icon: examples-flyout
 ---
 {% block styles %}
 {% do doc.styles.addCssFile('css/components/templates/use-cases.css') %}
