--- a/pages/content/amp-dev/documentation/index.html
+++ b/pages/content/amp-dev/documentation/index.html
@@ -5,7 +5,7 @@ $view: /views/2021/base.html
 flyout:
   format: websites
   description: Get Started
-  icon: flask
+  icon: learn
 
 frameworks:
   - name: Next.js
