--- a/pages/content/amp-dev/events/amp-fest-2020.html
+++ b/pages/content/amp-dev/events/amp-fest-2020.html
@@ -7,7 +7,7 @@ description: If you weren't able to catch AMP Fest live, check out all the talks
 flyout:
   format: email
   description: AMP Fest 2020
-  icon: star
+  icon: guides-documents
 
 ampconf: !g.yaml /shared/data/amp-fest.yaml
 
