--- a/pages/content/amp-dev/support/faq/index.html
+++ b/pages/content/amp-dev/support/faq/index.html
@@ -3,6 +3,11 @@ $title: FAQ
 $titles:
   navigation: FAQ
 $view: /views/custom.j2
+
+flyout:
+  format: ads
+  description: FAQ
+  icon: components-flyout
 ---
 {% do doc.styles.addCssFile('/css/components/templates/faq-overview.css') %}
 
