--- a/pages/content/amp-dev/about/how-amp-works.html
+++ b/pages/content/amp-dev/about/how-amp-works.html
@@ -7,7 +7,7 @@ $view: /views/overview/custom-content.j2
 flyout:
   format: websites
   description: How AMP works
-  icon: airplane
+  icon: guides-documents
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
