--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -6,7 +6,7 @@ $view: /views/overview/events.j2
 flyout:
   format: ads
   description: AMP Roadshow
-  icon: time
+  icon: wrench
 
 roadshow: !g.yaml /shared/data/roadshow.yaml
 
