replaced ontomatica symbol with wrench

--- a/pages/content/amp-dev/about/how-linked-data-works.html
+++ b/pages/content/amp-dev/about/how-linked-data-works.html
@@ -5,9 +5,9 @@ descriptions: Data is messy and disconnected. JSON-LD organizes and connects it,
 $view: /views/overview/custom-content.j2
 
 flyout:
-  format: ontomatica
+  format: stories
   description: JSON for Linking Data
-  icon: ontomatica
+  icon: wrench
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
