using trimmed teaser-ss.j2

--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -131,7 +131,7 @@ update teaser.j2 to read (in addition to teaser_doc) stage_doc and contents_doc
       <div class="ap-o-teaser-grid-list">
         {% for category, stories in categories %}
         {% for teaser_doc in stories %}
-        {% include '/views/partials/teaser.j2' %}
+        {% include '/views/partials/teaser-ss.j2' %}
         {% endfor %}
         {% endfor %}
       </div>
