returned teaser-ss to teaser

--- a/pages/content/amp-dev/romeo/0/index.html
+++ b/pages/content/amp-dev/romeo/0/index.html
@@ -129,7 +129,7 @@ stage:
       <div class="ap-o-teaser-grid-list">
         {% for category, stories in categories %}
         {% for teaser_doc in stories %}
-        {% include '/views/partials/teaser-ss.j2' %}
+        {% include '/views/partials/teaser.j2' %}
         {% endfor %}
         {% endfor %}
       </div>
