--- a/pages/content/amp-dev/sambo/index.html
+++ b/pages/content/amp-dev/sambo/index.html
@@ -1,7 +1,7 @@
 ---
-$title: AMP [= format|capitalize =] Guides & Tutorials
+$title: Tutorials
 $titles:
-  navigation: Guides & Tutorials
+  navigation: Tutorials
 $view: /views/overview/guides.j2
 $path: /sambo/index.html
 $localization:
